<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>com.github.keim-hs-esslingen</groupId>
        <artifactId>efs-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath/> <!-- skip parent lookup in parent directory. -->
    </parent>
    
    <groupId>com.github.keim-hs-esslingen</groupId>
    <artifactId>trias-adapter</artifactId>
    <version>1.2.1-SNAPSHOT</version>
    
    <name>TRIAS-Adapter</name>
    <description>Adapter base for TRIAS-APIs.</description>
    <url>https://github.com/keim-hs-esslingen/trias-adapter</url>
    
    <scm>
        <connection>scm:git:git://github.com:keim-hs-esslingen/trias-adapter.git</connection>
        <developerConnection>scm:git:ssh://github.com:keim-hs-esslingen/trias-adapter.git</developerConnection>
        <url>https://github.com/keim-hs-esslingen/trias-adapter</url>
    </scm>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>
    
    <developers>
        <developer>
            <name>Ben Oesch</name>
            <email>ben.oesch@hs-esslingen.de</email>
            <organization>Hochschule Esslingen</organization>
            <organizationUrl>https://www.hs-esslingen.de</organizationUrl>
        </developer>
        <developer>
            <name>Emanuel Reichsöllner</name>
            <email>emanuel.reichsoellner@hs-esslingen.de</email>
            <organization>Hochschule Esslingen</organization>
            <organizationUrl>https://www.hs-esslingen.de</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>14</java.version>
        <middleware-core.version>1.0.0-SNAPSHOT</middleware-core.version>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>com.github.keim-hs-esslingen</groupId>
            <artifactId>middleware-core</artifactId>
            <version>${middleware-core.version}</version>
        </dependency>
                
        <dependency>
            <!-- Needed for the JAXB annotations to work. -->
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
        <dependency>
            <!-- Needed to be able to (de-)serialize XML with JAXB.. -->
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
        </dependency>        
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency> 
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>       
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>-XX:+ShowCodeDetailsInExceptionMessages</argLine>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>